notes: split Part 4 build-it files at measured density, add nine new files
Add build-it 01c (backoff/reentrancy/diffs), 02a-02c (AQS latch, fairness and conditions, consolidated diff), 03/03b-03d (bounded blocking queue, two-lock queue and timed ops, drainTo and SPSC ring, queue diff) and 04 (Treiber stack and ABA). Re-plan the 00-index file table to match: finer 4.1-4.4 splits with written line counts, and 94a-94f split further into 94a2-94f2. Extend 92-interview-internals and virtual-threads/03a; trim 02-building-on-aqs to leaves 4.2.1-4.2.2 and fix 01b cross-links.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>